--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -41,6 +41,7 @@ jobs:
       with:
         token: ${{ secrets.GH_TOKEN }}
         title: '[Example] Update report'
+        branch: main
         body: |
             Update report
             - Updated with *today's* date
