feat(prerelease): Add tempfile to trigger workflow

--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -44,4 +44,4 @@ jobs:
         title: Your desired title
         body: Auto-created Pull Request
         branch: ${{ github.ref }} # The branch where you commit
-        base: develop # Don't forget to specify the right base branch here
+        base: main # Don't forget to specify the right base branch here
