feat(prerelease): Add tempfile to trigger workflow

--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -34,7 +34,7 @@ jobs:
         version-path: 'version'
         skip-version-file: true
         skip-commit: true
-        skip-tag: false
+        skip-tag: true
     - name: Create Pull Request
       id: cpr
       uses: peter-evans/create-pull-request@v5
