feat(prerelease): Add tempfile to trigger workflow

--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -32,7 +32,7 @@ jobs:
         skip-ci: false
         version-file: './version.yaml'
         version-path: 'version'
-        skip-version-file: true
+        skip-version-file: false
         skip-commit: true
         skip-tag: true
     - name: Create Pull Request
