chore: Added tag.yaml workflow

--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -4,6 +4,8 @@ run-name: ${{ github.actor }} is testing out Github Checks! Fingers crossed agai
 on:
   pull_request:
     branches: [main]
+  push:
+    branches: [main]
 
 jobs:
   tagfix:
