--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -12,6 +12,8 @@ jobs:
     name: tagfix
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@master
     - id: files
       uses: jitterbit/get-changed-files@v1
     - run: |
