--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -16,7 +16,10 @@ jobs:
       uses: actions/checkout@master
     - id: files
       uses: jitterbit/get-changed-files@v1
-    - run: |
+    - name: Update Tags
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      run: |
         for changed_file in ${{ steps.files.outputs.all }}; do
           filename=$changed_file
           dockerfile=${filename%%/*}
