--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -14,6 +14,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
+      with:
+        ref: ${{ github.head_ref }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
     - id: files
       uses: jitterbit/get-changed-files@v1
     - name: Update Tags
@@ -43,3 +46,4 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v5
       with:
         commit_message: Updated tags
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
