--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -46,4 +46,4 @@ jobs:
       with:
         commit_message: Updated tags
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
