--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -2,9 +2,8 @@ name: TagFixer
 run-name: ${{ github.actor }} is testing out Github Checks! Fingers crossed again 🚀
 
 on:
+  workflow_dispatch:
   pull_request:
-    branches: [main]
-  push:
     branches: [main]
 
 jobs:
@@ -16,6 +15,7 @@ jobs:
       uses: actions/checkout@master
       with:
         ref: ${{ github.head_ref }}
+        token: ${{ secrets.GH_TOKEN}}
     - id: files
       uses: jitterbit/get-changed-files@v1
     - name: Update Tags
