--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -4,6 +4,7 @@ run-name: ${{ github.actor }} is testing out Github Checks! Fingers crossed agai
 on:
   workflow_dispatch:
   pull_request:
+    types: [opened]
     branches: [main]
 
 jobs:
